k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: globeco-portfolio-management-portal-nodeport
  namespace: globeco
  labels:
    app: globeco-portfolio-management-portal
spec:
  type: NodePort
  # Revert to Cluster policy - Local broke connectivity
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    app: globeco-portfolio-management-portal
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32080
