k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: globeco-portfolio-management-portal
  namespace: globeco
  labels:
    app: globeco-portfolio-management-portal
spec:
  type: ClusterIP
  selector:
    app: globeco-portfolio-management-portal
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
